[package]
name = "coddl_tonic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
path = "src/server.rs"
name = "coddl_serer"

[dependencies]
futures = "0.3"
prost = "0.11.0"
tonic = "0.8"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tonic-build = "0.8"
